<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
   
       <TextView
           style="@style/LabelText"
           android:id="@+id/parish_saturdayMassesLabel"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/saturdayMassesLabel" />
   
       <TextView
           style="@style/ValueText"
           android:id="@+id/parish_saturdayMasses"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />
   
       <TextView
           style="@style/LabelText"
           android:id="@+id/parish_sundayMassesLabel"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/sundayMassesLabel" />
   
       <TextView
           style="@style/ValueText"
           android:id="@+id/parish_sundayMasses"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"  />
   
       <TextView
           style="@style/LabelText"
           android:id="@+id/parish_weekdayMassesLabel"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/weekdayMassesLabel" />
   
       <TextView
           style="@style/ValueText"
           android:id="@+id/parish_weekdayMasses"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"  />
   
       <TextView
           style="@style/LabelText"
           android:id="@+id/parish_otherMassesLabel"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/otherMassesLabel" />
   
       <TextView
           style="@style/ValueText"
           android:id="@+id/parish_otherMasses"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"  />
   
       <TextView
           style="@style/LabelText"
           android:id="@+id/parish_reconciliationLabel"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/reconciliationLabel" />
   
       <TextView
           style="@style/ValueText"
           android:id="@+id/parish_reconciliation"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"  />
	    
	    <TextView
	        style="@style/LabelText"
	        android:id="@+id/parish_physicalAddressLabel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/physicalAddressLabel" />
	
	    <TextView
	        style="@style/ActiveValueText"
	        android:id="@+id/parish_physicalAddress"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"  />
	
	    <TextView
	        style="@style/LabelText"
	        android:id="@+id/parish_postalAddressLabel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/postalAddressLabel" />
	
	    <TextView
	        style="@style/ActiveValueText"
	        android:id="@+id/parish_postalAddress"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"  />
	
	    <TextView
	        style="@style/LabelText"
	        android:id="@+id/parish_phoneLabel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/phoneLabel" />
	
	    <TextView
	        style="@style/ActiveValueText"
	        android:id="@+id/parish_phone"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"  />
	
	    <TextView
	        style="@style/LabelText"
	        android:id="@+id/parish_faxLabel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/faxLabel" />
	
	    <TextView
	        style="@style/ActiveValueText"
	        android:id="@+id/parish_fax"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"  />
	
	</LinearLayout>
</ScrollView>